--- a/Lesson1/hw1.html
+++ b/Lesson1/hw1.html
@@ -9,14 +9,17 @@
         h1{
             color: darkgray;
             font-size: 20px;
+            text-align: center;
 
         }
         h2{
             color: darkgray;
             font-size: 20px;
+            text-align: center;
         }
         p{
             font-size: 20px;
+            text-align: center;
         }
 
 
